[metadata]
name = pygreenx
description = Python tools and API for the GreenX library
author = Alexander Buccheri # Add all contributors
license = Apache 2
platforms = unix, linux, osx
version = 0.0.1

[options]
packages = pygreenx
python_requires = >=3.7
install_requires =
    numpy>=1.18.0
    pytest>=5.4.0
package_dir =
    =.
